CIMD-3294: sonar fix